# EconomicGame

./: .gitignore  pyproject.toml
src/Backend/: alembic.ini
src/Backend/EconomicApp/app/: DAO.py  models.py  schemas.py
src/Backend/EconomicApp/app/routers/: GameRouter.py
src/Backend/init/: env.py
