[tool.poetry]
name = 'EconomicGame'
version = '1.0.0'
description = ""
authors = ['yan <korotkevich3007@gmail.com>']
readme = 'README.md'

[tool.poetry.dependencies]
python = '^3.12'
fastapi = "^0.115.13"
sqlalchemy = "^2.0.41"
uvicorn = "^0.34.3"
alembic = "^1.16.2"
asyncpg = "^0.30.0"
python-dotenv = "^1.1.0"
